<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">


    <EditText
        android:id="@+id/editText3"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/date"
        android:layout_marginBottom="-30dp"
        android:inputType="date" />

    <Button
        android:id="@+id/button14"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:background="#64FFDA"
        android:onClick="chooseDate"
        android:text="@string/chdate"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/catinc"
        android:textSize="18sp"
        android:layout_marginBottom="30dp"/>

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:spinnerMode="dialog"/>

    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sum"
        android:layout_marginBottom="40dp"
        android:inputType="numberDecimal"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/button7"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-50dp"
        android:background="#64FFDA"
        android:text="@string/savei"
        android:textSize="18sp"
        android:onClick="saveIncome" />

    <Button
        android:id="@+id/button8"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="210dp"
        android:background="#64FFDA"
        android:onClick="deleteIncome"
        android:text="@string/deletei"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/icard"
        android:contentDescription="@null"/>

</LinearLayout>