<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/cname"
        android:layout_marginBottom="30dp" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/ccomment"
        android:layout_marginBottom="40dp" />

    <Button
        android:id="@+id/button12"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-50dp"
        android:background="#5C6BC0"
        android:text="@string/savei"
        android:onClick="saveCategory"
        android:textSize="18sp" />

    <Button
        android:id="@+id/button13"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        android:background="#5C6BC0"
        android:onClick="deleteCategory"
        android:text="@string/deletei"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/category"
        android:contentDescription="@null"/>

</LinearLayout>